--- a/assets/base.css
+++ b/assets/base.css
@@ -3,7 +3,7 @@
 :root,
 .color-background-1 {
   --color-foreground: var(--color-base-text);
-  --color-background: var(--color-base-background-1);
+  --color-background: #F3E7D3;
   --gradient-background: var(--gradient-base-background-1);
 }
 
@@ -21,7 +21,7 @@
 
 .color-accent-1 {
   --color-foreground: var(--color-base-solid-button-labels);
-  --color-background: var(--color-base-accent-1);
+  --color-background: #FF8675;
   --gradient-background: var(--gradient-base-accent-1);
 }
 
