--- a/assets/base.css
+++ b/assets/base.css
@@ -9,7 +9,7 @@
 
 .color-background-2 {
   --color-foreground: var(--color-base-text);
-  --color-background: var(--color-base-background-2);
+  --color-background: #938879;
   --gradient-background: var(--gradient-base-background-2);
 }
 
