--- a/assets/base.css
+++ b/assets/base.css
@@ -3,13 +3,13 @@
 :root,
 .color-background-1 {
   --color-foreground: var(--color-base-text);
-  --color-background: #F3E7D3;
+  --color-background: var(--color-base-background-1);
   --gradient-background: var(--gradient-base-background-1);
 }
 
 .color-background-2 {
   --color-foreground: var(--color-base-text);
-  --color-background: #938879;
+  --color-background: var(--color-base-background-2);
   --gradient-background: var(--gradient-base-background-2);
 }
 
@@ -21,7 +21,7 @@
 
 .color-accent-1 {
   --color-foreground: var(--color-base-solid-button-labels);
-  --color-background: #FF8675;
+  --color-background: var(--color-base-accent-1);
   --gradient-background: var(--gradient-base-accent-1);
 }
 
