--- a/assets/base.css
+++ b/assets/base.css
@@ -391,13 +391,24 @@ body,
   background-color: rgba(var(--color-foreground), 0.2);
 }
 
+@font-face {
+  font-family: "Chaparral Pro";
+  src: url("{{ 'ChaparralPro-Regular.otf' | asset_url }}") format("otf");
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  src: url("{{ 'SourceSansPro-Regular.ttf' | asset_url }}") format("ttf");
+}
+
 .text-body {
-  font-size: 1.5rem;
+  /* font-size: 1.5rem;
   letter-spacing: 0.06rem;
   line-height: calc(1 + 0.8 / var(--font-body-scale));
   font-family: var(--font-body-family);
   font-style: var(--font-body-style);
-  font-weight: var(--font-body-weight);
+  font-weight: var(--font-body-weight); */
+  font-family: "Source Sans Pro", sans-serif!important;
 }
 
 h1,
@@ -411,13 +422,20 @@ h5,
 .h3,
 .h4,
 .h5 {
-  font-family: var(--font-heading-family);
-  font-style: var(--font-heading-style);
+  font-family: "Chaparral Pro"!important;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 100px;
+  text-align: center;
+  letter-spacing: 0.45em;
+  color: #988D7B;
+  /* font-style: var(--font-heading-style);
   font-weight: var(--font-heading-weight);
   letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
   color: rgb(var(--color-foreground));
   line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
-  word-break: break-word;
+  word-break: break-word; */
 }
 
 .hxl {
