--- a/assets/base.css
+++ b/assets/base.css
@@ -2,9 +2,12 @@
 
 :root,
 .color-background-1 {
-  --color-foreground: var(--color-base-text);
   --color-background: var(--color-base-background-1);
   --gradient-background: var(--gradient-base-background-1);
+}
+
+.color-background-1 .h1, .h2, .h3, .h4, .h5 {
+  color: var(--gradient-base-accent-2);
 }
 
 .color-background-2 {
@@ -78,7 +81,7 @@
   color: #988D7B;
   --color-button: none;
   --alpha-button-background: 1;
-  border: 1px solid #FF8675;
+  border: 1px solid rgb(var(--color-base-accent-1));
   border-radius: 2px;
   padding: 2rem;
   text-transform: capitalize;
@@ -437,10 +440,8 @@ h5,
   text-transform: uppercase;
   font-weight: 700;
   font-size: 60px;
-  line-height: 100px;
   text-align: center;
   letter-spacing: 0.45em;
-  color: #988D7B;
   /* font-style: var(--font-heading-style);
   font-weight: var(--font-heading-weight);
   letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
@@ -1354,6 +1355,18 @@ button.shopify-payment-button__button--unbranded {
   box-shadow: var(--shadow-horizontal-offset) var(--shadow-vertical-offset) var(--shadow-blur-radius) rgba(var(--color-base-text), var(--shadow-opacity));
 }
 
+.button--primary {
+  color: rgb(var(--color-button-text));
+}
+
+.button:hover {
+  background-color: #988D7B;
+  color: #F3E7D3;
+  border: none;
+}
+
+
+
 .button,
 .shopify-challenge__button,
 .customer button {
@@ -1372,7 +1385,6 @@ button.shopify-payment-button__button--unbranded {
   cursor: pointer;
   font-size: 1.5rem;
   text-decoration: none;
-  color: rgb(var(--color-button-text));
   transition: 0.3s ease-in-out;
   -webkit-appearance: none;
   appearance: none;
