--- a/assets/base.css
+++ b/assets/base.css
@@ -6,7 +6,7 @@
   --gradient-background: var(--gradient-base-background-1);
 }
 
-.color-background-1 .h1, .h2, .h3, .h4, .h5 {
+.color-background-1 h1, h2, h3, h4, h5 {
   color: var(--gradient-base-accent-2);
 }
 
@@ -26,6 +26,10 @@
   --color-foreground: var(--color-base-solid-button-labels);
   --color-background: var(--color-base-accent-1);
   --gradient-background: var(--gradient-base-accent-1);
+}
+
+.color-accent-1 h1, h2, h3 {
+  color: var(--color-base-background-1);
 }
 
 .color-accent-2 {
@@ -442,10 +446,10 @@ h5,
   font-size: 60px;
   text-align: center;
   letter-spacing: 0.45em;
+  color: var(--gradient-base-accent-2);
   /* font-style: var(--font-heading-style);
   font-weight: var(--font-heading-weight);
   letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
-  color: rgb(var(--color-foreground));
   line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
   word-break: break-word; */
 }
