--- a/assets/base.css
+++ b/assets/base.css
@@ -3056,6 +3056,7 @@ details-disclosure > details {
 
 .media .current-image {
   display: block;
+  opacity: 1;
   transition: 0.3s ease-in-out;
   max-width: 100%;
   position: absolute;
@@ -3066,14 +3067,23 @@ details-disclosure > details {
 }
 
 .media:hover .current-image {
-  display: none !important;
+  opacity: 0;
 }
 
-.media #hover-image {
-  display: none;
+.media > .hover {
+  opacity: 0;
   transition: 0.3s ease-in-out;
 }
 
-.media:hover #hover-image {
-  display: block;
+.media:hover .hover {
+  opacity: 1;
+}
+
+.text-hover h3 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #FBF1E2;
+  text-shadow: 1px 1px 2px rgb(0 0 0 / 25%);
 }
