--- a/assets/base.css
+++ b/assets/base.css
@@ -3051,3 +3051,39 @@ details-disclosure > details {
     outline: transparent solid 1px;
   }
 }
+
+/* Hover effects */
+
+.media .current-image {
+  display: block;
+  opacity: 1;
+  transition: 0.3s ease-in-out;
+  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.media:hover .current-image {
+  opacity: 0;
+}
+
+.media > .hover {
+  opacity: 0;
+  transition: 0.3s ease-in-out;
+}
+
+.media:hover .hover {
+  opacity: 1;
+}
+
+.text-hover h3 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #FBF1E2;
+  text-shadow: 1px 1px 2px rgb(0 0 0 / 25%);
+}
