--- a/sections/email-subscribe.liquid
+++ b/sections/email-subscribe.liquid
@@ -44,7 +44,7 @@
            | image_url: width: 1500
            | image_tag: loading: 'lazy', sizes: sizes, widths: '165, 360, 535, 750, 1070, 1500' }}
         {%- else -%}
-          {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
+          {{ 'Alfonso_Truck.png' | asset_img_url }}
         {%- endif -%}
       </div>
     </div>
@@ -75,21 +75,19 @@
             </div>
             {%- when 'email_form' -%}
             <div
-              {{ block.shopify_attributes }}>
+            {{ block.shopify_attributes }}
+            style="width: 100%;">
               {% form 'customer', class: 'newsletter-form' %}
                 <input
                   type="hidden"
                   name="contact[tags]"
                   value="newsletter">
-                <div
-                  class="newsletter-form__field-wrapper">
-                  <div
-                    class="field">
-                    <input
+                  <input
                       id="NewsletterForm--{{ section.id }}"
                       type="email"
                       name="contact[email]"
                       class="field__input"
+                      style="border: solid 1px var(--gradient-base-accent-2);"
                       value="{{ form.email }}"
                       aria-required="true"
                       autocorrect="off"
@@ -106,18 +104,20 @@
                       required>
                     <label
                       class="field__label"
+                      style="color: var(--gradient-base-accent-2);"
                       for="NewsletterForm--{{ section.id }}">
                       {{ 'newsletter.label' | t }}
                     </label>
-                    <button
+                    <input
                       type="submit"
-                      class="newsletter-form__button field__button"
+                      class="button"
+                      style="margin: 2rem 0;
+                      color: var(--gradient-base-background-1);
+                      border: none;"
                       name="commit"
                       id="Subscribe"
-                      aria-label="{{ 'newsletter.button_label' | t }}">
-                      {% render 'icon-arrow' %}
-                    </button>
-                  </div>
+                      aria-label="I'm in">
+                    </input>
                   {%- if form.errors -%}
                     <small
                       class="newsletter-form__message form__message"
@@ -127,7 +127,7 @@
                       {{ form.errors.messages.email -}}
                     </small>
                   {%- endif -%}
-                </div>
+                </input>
                 {%- if form.posted_successfully? -%}
                   <h3
                     class="newsletter-form__message newsletter-form__message--success form__message"
@@ -140,20 +140,6 @@
                 {%- endif -%}
               {% endform %}
             </div>
-            {%- when 'button' -%}
-            {%- if block.settings.button_label != blank -%}
-              <a
-                {% if block.settings.button_link == blank %}
-                role="link"
-                aria-disabled="true"
-                {% else %}
-                href="{{ block.settings.button_link }}"
-                {% endif %}
-                class="button{% if block.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %}"
-                {{ block.shopify_attributes }}>
-                {{ block.settings.button_label | escape }}
-              </a>
-            {%- endif -%}
           {%- endcase -%}
         {%- endfor -%}
       </div>
@@ -460,7 +446,7 @@
           {
             "type": "text",
             "id": "button_label",
-            "default": "Button label",
+            "default": "I'm in",
             "label": "t:sections.email-subscribe.blocks.button.settings.button_label.label",
             "info": "t:sections.email-subscribe.blocks.button.settings.button_label.info"
           }, {
@@ -481,8 +467,6 @@
             "type": "text"
           }, {
             "type": "email_form"
-          }, {
-            "type": "button"
           }
         ]
       }
