--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -21,19 +21,59 @@ slideshow-component .slideshow.banner {
   padding: 0;
   position: relative;
   display: flex;
-  flex-direction: column;
+}
+
+.slideshow__media {
+  height: 100%;
+  width: 100%;
+}
+
+.slideshow__slide > .image-with-text__media-item {
+  border: 2px solid rgba(var(--color-base-accent-1));
+  padding: 10px;
 }
 
 @media screen and (max-width: 749px) {
-  .slideshow--placeholder.banner--mobile-bottom.banner--adapt_image .slideshow__media,
+  .slideshow--placeholder.banner--mobile-bottom.banner--adapt_image,
   .slideshow--placeholder.banner--adapt_image:not(.banner--mobile-bottom) {
     height: 28rem;
+  }
+  .slideshow__slide {
+  flex-direction: column;
+  height: 25rem;
+  }
+  .slideshow__slide > .image-with-text__media-item {
+    width: 20rem;
+    margin: 0 auto;
+  }
+
+  .slideshow__text-wrapper {
+    z-index: 0;
+    position: absolute;
+    top: 80%;
   }
 }
 
 @media screen and (min-width: 750px) {
   .slideshow--placeholder.banner--adapt_image {
     height: 56rem;
+  }
+  .slideshow__slide {
+    flex-direction: row;
+    position: relative;
+
+    }
+  .slideshow__slide > .image-with-text__media-item {
+    top: 15%;
+    width: 25rem;
+    height: 35rem;
+    position: absolute;
+    left: 25%;
+    z-index: 2;
+  }
+  .slideshow__text-wrapper {
+    left: 17%;
+    top: 0;
   }
 }
 
@@ -42,10 +82,12 @@ slideshow-component .slideshow.banner {
   flex-direction: column;
   justify-content: center;
   max-width: 54.5rem;
+  border: 0.4rem solid var(--gradient-base-background-1);
+  border-radius: 0.3rem;
 }
 
 .slideshow__text > * {
-  max-width: 100%;
+  max-width: 70%;
 }
 
 @media screen and (max-width: 749px) {
@@ -102,6 +144,9 @@ slideshow-component .slideshow.banner {
   .slideshow__text-wrapper.banner__content {
     height: 100%;
     padding: 5rem;
+  }
+  .slideshow__text {
+    min-height: 45rem;
   }
 }
 
